# weather-console

./: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  Console.cpp  Console.h  Weather.cpp  Weather.h
